tests/sponge/fail/invalid_syntax.rs
use in_place::sponge;

fn run() {
    sponge!(meow);
}

fn main() {
    let _ = run;
}
